# maskrcnn_benchmark.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MODEL.md  README.md  example-app.cpp  runner.cpp  tmp_test.cpp
checkpoints/: last_checkpoint
checkpoints_r/: last_checkpoint
checkpoints_r50_fpn/: bbox.json
configs/: e2e_faster_rcnn_R_101_FPN_1x.yaml  e2e_faster_rcnn_R_50_C4_1x.yaml  e2e_faster_rcnn_R_50_FPN_1x.yaml  e2e_faster_rcnn_V_39_FPN_2x.yaml  e2e_faster_rcnn_V_57_FPN_2x.yaml  train_e2e_faster_rcnn_R_101_FPN_1x.yaml  train_e2e_faster_rcnn_R_50_C4_1x.yaml  train_e2e_faster_rcnn_R_50_FPN_1x.yaml  train_test_e2e_faster_rcnn_R_50_FPN_1x.yaml
configs/quick_schedules/: e2e_faster_rcnn_R_50_FPN_quick.yaml
datasets/: coco
include/: rcnn.h
include/coco/: coco.h  mask.h  mask_api.h
include/config/: defaults.h
include/layers/: batch_norm.h  misc.h  smooth_l1_loss.h
include/rcnn/config/: defaults.h  defaults.hpp  paths_catalog.h
include/rcnn/data/: build.h  coco_detection.h  collate_batch.h  data.h
include/rcnn/data/datasets/: coco_datasets.h  concat_dataset.h
include/rcnn/data/samplers/: build.h  samplers.h
include/rcnn/data/transforms/: build.h  transforms.h
include/rcnn/engine/: inference.h  parallel.h  trainer.h
include/rcnn/layers/: ROIAlign.h  batch_norm.h  box_encode.h  box_iou.h  cat.h  conv2d.h  make_layers.h  match_proposals.h  misc.h  nms.h  roi_align.h  smooth_l1_loss.h
include/rcnn/layers/cpu/: vision_cpu.h
include/rcnn/layers/cuda/: vision_cuda.h
include/rcnn/modeling/: balanced_positive_negative_sampler.h  box_coder.h  matcher.h  modeling.h  poolers.h  registry.h
include/rcnn/modeling/backbone/: backbone.h  fpn.h  resnet.h  vovnet.h
include/rcnn/modeling/detector/: detectors.h  generalized_rcnn.h
include/rcnn/modeling/roi_heads/: roi_heads.h
include/rcnn/modeling/roi_heads/box_head/: box_head.h  inference.h  loss.h  roi_box_feature_extractors.h  roi_box_predictors.h
include/rcnn/modeling/roi_heads/mask_head/: inference.h  loss.h  mask_head.h  roi_mask_feature_extractors.h  roi_mask_predictors.h
include/rcnn/modeling/rpn/: anchor_generator.h  inference.h  loss.h  rpn.h  utils.h
include/rcnn/solver/: build.h  lr_scheduler.h  optimizer.h  solver_build.h
include/rcnn/structures/: bounding_box.h  image_list.h  segmentation_mask.h
include/rcnn/utils/: bisect.h  checkpoint.h  jit_to_cpp.h  metric_logger.h  nms.h  registry.h  timer.h  tovec.h
include/structures/: bounding_box.h
lib/libtorch/: build-hash  build-version
lib/libtorch/include/ATen/: CPUBoolType.h  CPUByteType.h  CPUCharType.h  CPUDoubleType.h  CPUFloatType.h  CPUHalfType.h  CPUIntType.h  CPULongType.h  CPUQInt8Type.h  CPUShortType.h  CUDABoolType.h  CUDAByteType.h  CUDACharType.h  CUDADoubleType.h  CUDAFloatType.h  CUDAHalfType.h  CUDAIntType.h  CUDALongType.h  CUDAQInt8Type.h  CUDAShortType.h  Config.h  ExtensionBackendRegistration.h  Functions.h  LegacyTHCPUBoolDispatcher.h  LegacyTHCPUQInt8Dispatcher.h  LegacyTHCUDABoolDispatcher.h  LegacyTHCUDAQInt8Dispatcher.h  MSNPUBoolType.h  MSNPUByteType.h  MSNPUCharType.h  MSNPUDoubleType.h  MSNPUFloatType.h  MSNPUHalfType.h  MSNPUIntType.h  MSNPULongType.h  MSNPUQInt8Type.h  MSNPUShortType.h  MSNPUType.h  MkldnnCPUFloatType.h  NativeFunctions.h  (+31 more)
lib/libtorch/include/ATen/cuda/: CUDAConfig.h
lib/libtorch/include/TH/: THGeneral.h
lib/libtorch/include/c10/macros/: cmake_macros.h
lib/libtorch/include/caffe2/core/: macros.h
lib/libtorch/include/caffe2/proto/: caffe2.pb.h  metanet.pb.h  predictor_consts.pb.h  (+2 more)
lib/libtorch/lib/: libgomp-8bba0e50.so.1
python_utils/: coco_eval.py  to_jit.py
resource/: coco_eval.py  e2e_faster_rcnn_R_101_FPN_1x.yaml  e2e_faster_rcnn_R_50_C4_1x.yaml  e2e_faster_rcnn_R_50_FPN_1x.yaml
source/: CMakeLists.txt
source/coco/: CMakeLists.txt  coco.cpp  mask.cpp  mask_api.cpp
source/config/: defaults.cpp
source/layers/: ROIAlign.cpp  misc.cpp  smooth_l1_loss.cpp
source/rcnn/config/: CMakeLists.txt  defaults.cpp  paths_catalog.cpp
source/rcnn/data/: CMakeLists.txt  build.cpp  coco_detection.cpp  collate_batch.cpp
source/rcnn/data/datasets/: coco_datasets.cpp
source/rcnn/data/datasets/evaluation/coco/: coco_eval.cpp
source/rcnn/data/samplers/: build.cpp  samplers.cpp
source/rcnn/data/transforms/: build.cpp  transforms.cpp
source/rcnn/engine/: CMakeLists.txt  inference.cpp  parallel.cpp  trainer.cpp
source/rcnn/layers/: CMakeLists.txt  ROIAlign.cpp  batch_norm.cpp  conv2d.cpp  make_layers.cpp  misc.cpp  roi_align.cpp  smooth_l1_loss.cpp
source/rcnn/layers/cpu/: ROIAlign_cpu.cpp  box_encode_cpu.cpp  box_iou_cpu.cpp  match_proposals_cpu.cpp  nms_cpu.cpp
source/rcnn/layers/cuda/: ROIAlign_cuda.cu  box_encode_cuda.cu  box_iou_cuda.cu  match_proposals_cuda.cu  nms_cuda.cu
source/rcnn/modeling/: CMakeLists.txt  balanced_positive_negative_sampler.cpp  box_coder.cpp  matcher.cpp  poolers.cpp
source/rcnn/modeling/backbone/: backbone.cpp  fpn.cpp  resnet.cpp  vovnet.cpp
source/rcnn/modeling/detector/: detectors.cpp  generalized_rcnn.cpp
source/rcnn/modeling/roi_heads/: roi_heads.cpp
source/rcnn/modeling/roi_heads/box_head/: box_head.cpp  inference.cpp  loss.cpp  roi_box_feature_extractors.cpp  roi_box_predictors.cpp
source/rcnn/modeling/roi_heads/mask_head/: inference.cpp  loss.cpp  mask_head.cpp  roi_mask_feature_extractors.cpp  roi_mask_predictors.cpp
source/rcnn/modeling/rpn/: anchor_generator.cpp  inference.cpp  loss.cpp  rpn.cpp  utils.cpp
source/rcnn/solver/: CMakeLists.txt  build.cpp  lr_scheduler.cpp  optimizer.cpp  solver_build.cpp
source/rcnn/structures/: CMakeLists.txt  bounding_box.cpp  image_list.cpp  segmentation_mask.cpp
source/rcnn/utils/: CMakeLists.txt  bisect.cpp  checkpoint.cpp  jit_to_cpp.cpp  metric_logger.cpp  nms.cpp  registry.cpp  timer.cpp  tovec.cpp
source/structures/: bounding_box.cpp
source/utils/: nms.cpp
test/rcnn/: CMakeLists.txt  test.cpp
test/rcnn/config/: defaultsTests.cpp
test/rcnn/modeling/backbone/: backboneTests.cpp
test/rcnn/modeling/rpn/: rpnTests.cpp
test/rcnn/utils/: bisectTests.cpp
(+9 files in other folders)
